Added a score manager

--- a/Raylib Starter Project.vcxproj
+++ b/Raylib Starter Project.vcxproj
@@ -138,12 +138,14 @@
     <ClCompile Include="BrickGrid.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Paddle.cpp" />
+    <ClCompile Include="ScoreManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ball.h" />
     <ClInclude Include="Brick.h" />
     <ClInclude Include="BrickGrid.h" />
     <ClInclude Include="Paddle.h" />
+    <ClInclude Include="ScoreManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
